logs/watchdog_20251012_1830.log
[12/10/2025 18:30:01,64] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 18:30:01,87] END WATCHDOG 
